--- a/ReadMe
+++ b/ReadMe
@@ -44,5 +44,5 @@ This project is licensed under the [MIT License](LICENSE).
 
 ## Contact
 
-For any inquiries or feedback, please contact [Your Name](mailto:your.email@example.com).
+For any inquiries or feedback, please contact [Kanupriya](mailto:kanupriya0092@gmail.com).
 
